--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,6 +4,20 @@
     tools:context=".ui.main.MainActivity">
 
     <item
+        android:id="@+id/menu_sort_alpha"
+        android:title="Sort Alpha"
+        android:icon="@drawable/ic_sort_by_alpha"
+        app:showAsAction="ifRoom"/>
+
+    <item
+        android:id="@+id/menu_sort_vote"
+        android:title="Sort Vote"
+        android:icon="@drawable/ic_sort_vote"
+        android:visible="false"
+        android:enabled="false"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/menu_info"
         android:title="Info"
         android:icon="@drawable/ic_info"
