--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -17,8 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             app:contentScrim="?attr/colorPrimary"
-            app:statusBarScrim="?attr/colorPrimaryDark"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:statusBarScrim="?attr/colorPrimaryDark">
 
             <ImageView
                 android:id="@+id/movieImage"
@@ -45,45 +45,9 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/movieTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:padding="16dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                tools:text="Title"/>
-
-            <TextView
-                android:id="@+id/movieSummary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                tools:text="Summary"/>
-
-            <TextView
-                android:id="@+id/movieDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                tools:text="Date"/>
-
-            <TextView
-                android:id="@+id/movieAverage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                tools:text="Average"/>
-
-        </LinearLayout>
+        <include
+            android:id="@+id/layoutDescription"
+            layout="@layout/layout_description_movie" />
 
     </androidx.core.widget.NestedScrollView>
 
@@ -91,9 +55,9 @@
         android:id="@+id/movieDetailFavorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/default_margin"
         android:src="@drawable/ic_favorite_border"
         app:layout_anchor="@id/appBarLayout"
-        app:layout_anchorGravity="bottom|end"/>
+        app:layout_anchorGravity="bottom|end" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
