--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,12 @@
 <resources>
     <dimen name="default_margin">16dp</dimen>
     <dimen name="default_margin_half">8dp</dimen>
+
     <dimen name="default_padding">16dp</dimen>
     <dimen name="default_padding_half">8dp</dimen>
+
+    <dimen name="default_font_size_very_big">24sp</dimen>
+    <dimen name="default_font_size_big">20sp</dimen>
+    <dimen name="default_font_size_medium">16sp</dimen>
+    <dimen name="default_font_size_small">14sp</dimen>
 </resources>
