--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="black_transparent">#22000000</color>
+    <color name="grey">#BAE1F5FE</color>
     <color name="white">#FFFFFFFF</color>
     <color name="teal_200">#6ff9ff</color>
     <color name="teal_500">#26c6da</color>
