--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent">
 
         <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager_stories"
+            android:id="@+id/viewPagerStories"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
