--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_200">#6ff9ff</color>
     <color name="teal_500">#26c6da</color>
     <color name="teal_700">#0095a8</color>
-    <color name="pink_200">#f48fb1</color>
+    <color name="pink_200">#ffb2dd</color>
     <color name="pink_500">#ffc1e3</color>
 </resources>
