--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="default_font_size_big">20sp</dimen>
     <dimen name="default_font_size_medium">16sp</dimen>
     <dimen name="default_font_size_small">14sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
