--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -36,6 +36,11 @@
                 android:titleTextColor="@color/white"
                 tools:title="Movie name" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/gradient" />
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -59,5 +64,12 @@
         android:src="@drawable/ic_favorite_border"
         app:layout_anchor="@id/appBarLayout"
         app:layout_anchorGravity="bottom|end" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/default_margin_half" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
