--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,8 @@
         android:id="@+id/menu_sort_alpha"
         android:title="Sort Alpha"
         android:icon="@drawable/ic_sort_by_alpha"
+        android:visible="false"
+        android:enabled="false"
         app:showAsAction="ifRoom"/>
 
     <item
